--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/Theme.AppCompat.NoActionBar" >
         <receiver
             android:name="com.example.vibhuyadav.sleepguard.GcmBroadcastReceiver"
             android:permission="com.google.android.c2dm.permission.SEND" >
@@ -33,6 +33,7 @@
         <service android:name="com.example.vibhuyadav.sleepguard.GcmIntentService" />
 
         <activity
+            android:screenOrientation="portrait"
             android:name="com.example.vibhuyadav.sleepguard.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
