--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
             android:permission="com.google.android.c2dm.permission.SEND" >
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
-
+                <action android:name="com.example.vibhuyadav.sleepguard.notifications" />
                 <category android:name="com.example.vibhuyadav.sleepgaurd" />
             </intent-filter>
         </receiver>
