--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,34 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.vibhuyadav.sleepguard" >
+    package="com.example.vibhuyadav.sleepguard">
 
     <!-- <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="17"/> -->
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+
+    <permission
+        android:name="com.example.vibhuyadav.sleepguard.permission.C2D_MESSAGE"
+        android:protectionLevel="signature" />
+    <uses-permission android:name="com.example.vibhuyadav.sleepguard.permission.C2D_MESSAGE" />
 
     <uses-feature
         android:name="android.hardware.microphone"
         android:required="true" />
 
-    <permission
-        android:name="com.example.vibhuyadav.sleepguard.permission.C2D_MESSAGE"
-        android:protectionLevel="signature" />
-
-    <uses-permission android:name="com.example.vibhuyadav.sleepgaurd.permission.C2D_MESSAGE" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.AppCompat.NoActionBar" >
+        android:theme="@style/Theme.AppCompat.NoActionBar">
         <receiver
             android:name="com.example.vibhuyadav.sleepguard.GcmBroadcastReceiver"
-            android:permission="com.google.android.c2dm.permission.SEND" >
+            android:permission="com.google.android.c2dm.permission.SEND">
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
 
@@ -39,9 +42,9 @@
         <service android:name="com.example.vibhuyadav.sleepguard.GcmIntentService" />
 
         <activity
-            android:screenOrientation="portrait"
             android:name="com.example.vibhuyadav.sleepguard.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -50,13 +53,16 @@
         </activity>
         <service
             android:name=".SleepGuardBackgroundService"
-            android:exported="false"/>
-        <meta-data android:name="com.google.android.gms.version"
+            android:exported="false" />
+        <meta-data
+            android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
         <service
             android:name="Voice"
             android:exported="false" />
+
+
     </application>
 
 </manifest>
