--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
     <permission
         android:name="com.example.vibhuyadav.sleepguard.permission.C2D_MESSAGE"
@@ -61,6 +62,11 @@
         <service
             android:name="Voice"
             android:exported="false" />
+
+        <service
+            android:name="com.example.vibhuyadav.sleepguard.NotificationService"
+            android:label="Notification Service" >
+        </service>
 
 
     </application>
