--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,25 +42,25 @@
 
         <service android:name="com.example.vibhuyadav.sleepguard.GcmIntentService" />
 
-        <activity
-            android:name="com.example.vibhuyadav.sleepguard.SplashScreenActivity"
-            android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <!--<    <activity
+                android:name="com.example.vibhuyadav.sleepguard.SplashScreenActivity"
+                android:label="@string/app_name" >
+                <intent-filter>
+                    <action android:name="android.intent.action.MAIN" />
+                    <category android:name="android.intent.category.LAUNCHER" />
+                </intent-filter>
+            </activity>-->
 
-        <activity
-            android:name="com.example.vibhuyadav.sleepguard.MainActivity"
-            android:label="@string/app_name"
-            android:screenOrientation="portrait">
-            <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.MAIN" />-->
+            <activity
+                android:name="com.example.vibhuyadav.sleepguard.MainActivity"
+                android:label="@string/app_name"
+                android:screenOrientation="portrait">
+                <intent-filter>
+                    <action android:name="android.intent.action.MAIN" />
 
-                <!--<category android:name="android.intent.category.LAUNCHER" />-->
-            <!--</intent-filter>-->
-        </activity>
+                    <category android:name="android.intent.category.LAUNCHER" />
+                </intent-filter>
+            </activity>
         <service
             android:name=".SleepGuardBackgroundService"
             android:exported="false" />
