Uncommented Splash in Manifest

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,24 +42,24 @@
 
         <service android:name="com.example.vibhuyadav.sleepguard.GcmIntentService" />
 
-        <!--<    <activity
+            <activity
                 android:name="com.example.vibhuyadav.sleepguard.SplashScreenActivity"
                 android:label="@string/app_name" >
                 <intent-filter>
                     <action android:name="android.intent.action.MAIN" />
                     <category android:name="android.intent.category.LAUNCHER" />
                 </intent-filter>
-            </activity>-->
+            </activity>
 
             <activity
                 android:name="com.example.vibhuyadav.sleepguard.MainActivity"
                 android:label="@string/app_name"
                 android:screenOrientation="portrait">
-                <intent-filter>
-                    <action android:name="android.intent.action.MAIN" />
+                <!--<intent-filter>-->
+                    <!--<action android:name="android.intent.action.MAIN" />-->
 
-                    <category android:name="android.intent.category.LAUNCHER" />
-                </intent-filter>
+                    <!--<category android:name="android.intent.category.LAUNCHER" />-->
+                <!--</intent-filter>-->
             </activity>
         <service
             android:name=".SleepGuardBackgroundService"
