User Preferences added to aid in maintaining state User Persistance at the backend added

--- a/backend/src/main/webapp/WEB-INF/web.xml
+++ b/backend/src/main/webapp/WEB-INF/web.xml
@@ -14,7 +14,8 @@
         <init-param>
             <param-name>services</param-name>
             <param-value>com.example.vibhuyadav.sleepguard.backend.RegistrationEndpoint,
-                com.example.vibhuyadav.sleepguard.backend.MessagingEndpoint
+                com.example.vibhuyadav.sleepguard.backend.MessagingEndpoint,
+                com.example.vibhuyadav.sleepguard.backend.UserEndPoint
             </param-value>
         </init-param>
     </servlet>
