--- a/backend/src/main/webapp/WEB-INF/web.xml
+++ b/backend/src/main/webapp/WEB-INF/web.xml
@@ -15,7 +15,7 @@
             <param-name>services</param-name>
             <param-value>com.example.vibhuyadav.sleepguard.backend.RegistrationEndpoint,
                 com.example.vibhuyadav.sleepguard.backend.MessagingEndpoint,
-                com.example.vibhuyadav.sleepguard.backend.UserEndPoint
+                com.example.vibhuyadav.sleepguard.backend.UserEndPoint,
                 com.example.vibhuyadav.sleepguard.backend.SleepReceiverEndpoint
             </param-value>
         </init-param>
