--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -29,6 +29,8 @@ dependencies {
     compile 'javax.servlet:servlet-api:2.5'
     compile 'com.googlecode.objectify:objectify:5.0.3'
     compile 'com.ganyo:gcm-server:1.0.2'
+    compile 'com.google.code.gson:gson:1.1.1'
+    compile 'com.vividsolutions:jts:1.8'
 }
 
 appengine {
