--- a/backend/src/main/webapp/WEB-INF/web.xml
+++ b/backend/src/main/webapp/WEB-INF/web.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<web-app xmlns="http://java.sun.com/xml/ns/javaee" version="2.5">
+<web-app xmlns="http://java.sun.com/xml/ns/javaee" version="2.5"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
     <filter>
         <filter-name>ObjectifyFilter</filter-name>
         <filter-class>com.googlecode.objectify.ObjectifyFilter</filter-class>
@@ -16,7 +18,8 @@
             <param-value>com.example.vibhuyadav.sleepguard.backend.RegistrationEndpoint,
                 com.example.vibhuyadav.sleepguard.backend.MessagingEndpoint,
                 com.example.vibhuyadav.sleepguard.backend.UserEndPoint,
-                com.example.vibhuyadav.sleepguard.backend.SleepReceiverEndpoint
+                com.example.vibhuyadav.sleepguard.backend.SleepReceiverEndpoint,
+                com.example.vibhuyadav.sleepguard.backend.GeoFencingAPI
             </param-value>
         </init-param>
     </servlet>
